# source-servers-list

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile  servers.yaml.example
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: env.rs  handler.rs  main.rs  rcon.rs
backend/src/ws/: entries.rs  handler.rs  mod.rs
shared/: Cargo.toml
shared/src/: handler.rs  lib.rs  stream.rs
static/: index.css  index.html
wasm/: Cargo.toml  build.rs
wasm/src/: handler.rs  lib.rs  notif.rs
wasm/src/ui/: handler.rs  mod.rs  msg.rs
wasm/src/ui/listings/: listing.rs  mod.rs  players_list.rs
wasm/src/ws/: entries.rs  handler.rs  mod.rs
