cargo-features = ["panic-immediate-abort"]

[workspace]
resolver = "3"
members = ["shared", "wasm", "backend"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
shared = { path = "shared" }
wasm = { path = "wasm" }
dotenvy = "0.15.7"
wasm-bindgen = "0.2.108"
fs_extra = "1"
web-sys = "0.3.85"
serde = "1.0.228"
wasm-bindgen-futures = "0.4.58"
serde_json = "1.0.149"
glob = "0.3.3"
minify = "1.3.0"
byteorder = "1.5.0"
rocket = "0.5.1"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
lazy_static = "1.5.0"
futures-util = "0.3.32"
tokio-tungstenite-wasm = "0.8.2"
gloo-console = "0.4.0"
rocket_ws = "0.1.1"
tokio = "1.50.0"
gloo = "0.12.0"
inventory = "0.3.24"
pin-project = "1.1.11"
console_error_panic_hook = "0.1.7"
lightningcss = "1.0.0-alpha.71"
swc = "60.0.0"
swc_common = "21.0.0"
serde_yaml = "0.9.34"
ref_thread_local = "0.1.1"
